// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="details-nonce-control" _icons="kolicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" id="details-nonce-heading" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-nonce-heading" class="collapsible__content indented-text kol-details__content" id="details-nonce-control" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--open kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="details-nonce-control" _ariaexpanded="" _icons="kolicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" id="details-nonce-heading" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-labelledby="details-nonce-heading" class="collapsible__content indented-text kol-details__content" id="details-nonce-control" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="details-nonce-control" _disabled="" _icons="kolicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" id="details-nonce-heading" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-nonce-heading" class="collapsible__content indented-text kol-details__content" id="details-nonce-control" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled collapsible--open kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="details-nonce-control" _ariaexpanded="" _disabled="" _icons="kolicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" id="details-nonce-heading" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-labelledby="details-nonce-heading" class="collapsible__content indented-text kol-details__content" id="details-nonce-control" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=3 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="details-nonce">
      <h3 class="collapsible__heading kol-details__heading kol-headline kol-headline--h3 kol-headline--single">
        <kol-button-wc _ariacontrols="details-nonce-control" _icons="kolicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" id="details-nonce-heading" slot="expert"></kol-button-wc>
      </h3>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-nonce-heading" class="collapsible__content indented-text kol-details__content" id="details-nonce-control" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="details-nonce-control" _icons="kolicon-chevron-right" _label="Zusammenfassung" class="collapsible__heading-button kol-details__heading-button" id="details-nonce-heading" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-nonce-heading" class="collapsible__content indented-text kol-details__content" id="details-nonce-control" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;
